# python-learning

./: .gitignore  README.md  professional-python.md  pyproject.toml  python-from-scala.md
src/python_learning/: __init__.py  file_update_test.py  generators.py  generics.py  list_comprehensions.py  main.py  protocols.py  pydantic_basics.py
src/python_learning/settings/: run.sh  settings.py
src/python_learning/settings/secrets/: .env.secrets  app_api_key  app_db_password
src/python_learning/utils/: file_updater.py
