[project]
name = "python-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_learning"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.13",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
